--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,26 @@
   }
 
   .Button {
-    @apply underline inline-block;
+    @apply inline-block border px-3 py-2 rounded text-sm font-medium;
+  }
+
+  .Button--primary {
+    @apply bg-blue-700 border-blue-700 text-white;
+    @apply hover:bg-blue-800 hover:border-blue-800;
+  }
+
+  .Button--secondary {
+    @apply bg-gray-200 border-gray-200 text-gray-700;
+    @apply hover:bg-gray-300 hover:border-gray-300;
+  }
+
+  .Button--danger {
+    @apply bg-red-600 border-red-600 text-white;
+    @apply hover:bg-red-700 hover:border-red-700;
+  }
+
+  .Button--outline-danger {
+    @apply bg-white border-red-600 text-red-800;
+    @apply hover:bg-red-100;
   }
 }
