--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,10 @@
     @apply !outline-black !outline-2 !outline-offset-0 outline;
   }
 
+  body {
+    overflow-wrap: break-word;
+  }
+
   strong {
     @apply font-semibold;
   }
