add weekly digest flag to db and pages (though not implemented yet)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -44,6 +44,10 @@
     @apply flex flex-col gap-y-1.5;
   }
 
+  .FormGroup--horizontal {
+    @apply flex-row gap-x-2 gap-y-0;
+  }
+
   .Label {
     @apply flex flex-col leading-tight;
   }
