Several changes here and there:
- Use Work Sans font
- Truncate the term text on the index page when it's too long
- Remove the * used to denote required fields
- Add aria-multiline=false to textareas and make the textareas behave like <input type=text> on Enter keypress
- Improve layout of the controls on the index page
- Use GitHub's <details-menu> for the profile menu
- Install Lucide (for icons)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,7 +22,7 @@
   }
 
   .Button {
-    @apply inline-block border px-3 py-2 rounded text-sm font-semibold;
+    @apply inline-block border px-3 py-2 rounded text-sm font-semibold motion-safe:transition-colors;
   }
 
   .Button--primary {
