--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,6 +60,10 @@
     @apply text-sm text-gray-500;
   }
 
+  .Label-error {
+    @apply text-sm text-red-700 font-medium;
+  }
+
   .FormControl {
     @apply rounded border-gray-300;
   }
