--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
 
 @layer components {
   .PageHeading {
-    @apply text-3xl font-bold mb-5 text-gray-900;
+    @apply text-2xl sm:text-3xl font-bold mb-5 text-gray-900;
   }
 
   .Button {
